refresh token usage, added userToken struct and response
