# models/auth.go
@@ -3,6 +3,9 @@ package models
 import (
 	"SejutaCita/common"
 	"context"
+	"encoding/json"
+	"fmt"
+	"io"
 	"log"
 	"os"
 	"time"
@@ -14,13 +17,11 @@ import (
 	"golang.org/x/crypto/bcrypt"
 )
 
-// A token that is returned in the response
-// swagger:response tokenResponse
-type tokenResponseWrapper struct {
+// Tokens that are returned in the response
+// swagger:response userTokenResponse
+type userTokenResponseWrapper struct {
 	// in:body
-	Body struct {
-		Token string
-	}
+	Body UserToken
 }
 
 // swagger:parameters login
@@ -33,6 +34,22 @@ type loginParameterWrapper struct {
 		// required:true
 		Password string
 	}
+}
+
+type UserToken struct {
+	Token        string `json:"token"`
+	RefreshToken string `json:"refresh_token"`
+}
+
+type SignedDetails struct {
+	UserId   string
+	UserRole UserRole
+	jwt.StandardClaims
+}
+
+func (tokens *UserToken) ToJSON(w io.Writer) error {
+	e := json.NewEncoder(w)
+	return e.Encode(tokens)
 }
 
 func HashAndSalt(password string) string {
@@ -53,12 +70,6 @@ func VerifyPassword(plainPassword string, hashedPassword string) bool {
 	return true
 }
 
-type SignedDetails struct {
-	UserId   string
-	UserRole UserRole
-	jwt.StandardClaims
-}
-
 func CreateToken(userId string) (string, error) {
 	atClaims := jwt.MapClaims{}
 	atClaims["authorized"] = true
@@ -73,23 +84,29 @@ func CreateToken(userId string) (string, error) {
 }
 
 func GenerateAllTokens(user *User) (signedToken string, signedRefreshToken string, err error) {
+	fmt.Println(1)
 	claims := &SignedDetails{
 		UserId:   user.Id.Hex(),
 		UserRole: user.Role,
 		StandardClaims: jwt.StandardClaims{
-			ExpiresAt: time.Now().Local().Add(time.Hour * time.Duration(24)).Unix(),
+			ExpiresAt: time.Now().Add(time.Hour * time.Duration(24)).Unix(),
 		},
 	}
 
 	refreshClaims := &SignedDetails{
+		UserId: user.Id.Hex(),
 		StandardClaims: jwt.StandardClaims{
-			ExpiresAt: time.Now().Local().Add(time.Hour * time.Duration(168)).Unix(),
+			ExpiresAt: time.Now().Add(time.Hour * time.Duration(168)).Unix(),
 		},
 	}
 
 	token, err := jwt.NewWithClaims(jwt.SigningMethodHS256, claims).SignedString([]byte(os.Getenv("SECRET_KEY")))
-	refreshToken, err := jwt.NewWithClaims(jwt.SigningMethodHS256, refreshClaims).SignedString([]byte(os.Getenv("SECRET_KEY")))
+	if err != nil {
+		log.Panic(err)
+		return
+	}
 
+	refreshToken, err := jwt.NewWithClaims(jwt.SigningMethodHS256, refreshClaims).SignedString([]byte(os.Getenv("SECRET_KEY")))
 	if err != nil {
 		log.Panic(err)
 		return
@@ -107,16 +124,17 @@ func UpdateAllTokens(signedToken string, signedRefreshToken string, userId primi
 
 	var ctx, cancel = context.WithTimeout(context.Background(), 100*time.Second)
 
-	updateObj := bson.M{}
+	filter := bson.M{"_id": userId}
 
-	updateObj["token"] = signedToken
-	updateObj["refresh_token"] = signedRefreshToken
-
-	Updated_at, _ := time.Parse(time.RFC3339, time.Now().Format(time.RFC3339))
-	updateObj["updated_at"] = Updated_at
+	updater := bson.M{
+		"$set": bson.M{
+			"token":         signedToken,
+			"refresh_token": signedRefreshToken,
+			"updated_at":    time.Now(),
+		},
+	}
 
 	upsert := true
-	filter := bson.M{"_id": userId}
 	opt := options.UpdateOptions{
 		Upsert: &upsert,
 	}
@@ -124,9 +142,7 @@ func UpdateAllTokens(signedToken string, signedRefreshToken string, userId primi
 	_, err = db.Collection("users").UpdateOne(
 		ctx,
 		filter,
-		bson.M{
-			"$set": updateObj,
-		},
+		updater,
 		&opt,
 	)
 	defer cancel()
@@ -135,12 +151,10 @@ func UpdateAllTokens(signedToken string, signedRefreshToken string, userId primi
 		log.Panic(err)
 		return
 	}
-
-	return
 }
 
-func ValidateToken(signedToken string) (*SignedDetails, error) {
-	token, err := jwt.ParseWithClaims(
+func ValidateToken(signedToken string) (claims *SignedDetails, err error) {
+	token, _ := jwt.ParseWithClaims(
 		signedToken,
 		&SignedDetails{},
 		func(token *jwt.Token) (interface{}, error) {
@@ -148,17 +162,69 @@ func ValidateToken(signedToken string) (*SignedDetails, error) {
 		},
 	)
 
-	if err != nil {
-		return nil, err
-	}
-
 	claims, ok := token.Claims.(*SignedDetails)
 	if !ok {
 		return nil, ErrInvalidToken
 	}
-	if claims.ExpiresAt < time.Now().Local().Unix() {
-		return nil, ErrExpiredToken
+
+	if claims.ExpiresAt < time.Now().Unix() {
+		if err != nil {
+			return nil, ErrExpiredToken
+		}
+	}
+
+	if claims.UserRole == "" {
+		fmt.Println(claims.UserId)
+
+		claims, err = renewTokens(claims.UserId)
+		if err != nil {
+			return nil, err
+		}
+		return claims, nil
 	}
 
 	return claims, nil
+}
+
+func renewTokens(userId string) (*SignedDetails, error) {
+	ctx := context.Background()
+
+	user, err := GetUserById(&ctx, userId)
+	if err != nil {
+		return nil, ErrExpiredToken
+	}
+
+	refreshToken, err := jwt.ParseWithClaims(
+		*user.RefreshToken,
+		&SignedDetails{},
+		func(token *jwt.Token) (interface{}, error) {
+			return []byte(os.Getenv("SECRET_KEY")), nil
+		},
+	)
+	if err != nil {
+		return nil, ErrExpiredToken
+	}
+
+	refreshClaims, ok := refreshToken.Claims.(*SignedDetails)
+	if !ok {
+		return nil, ErrExpiredToken
+	}
+
+	if refreshClaims.ExpiresAt >= time.Now().Unix() {
+		signedToken, signedRefreshToken, _ := GenerateAllTokens(user)
+		UpdateAllTokens(signedToken, signedRefreshToken, user.Id)
+		token, err := jwt.ParseWithClaims(
+			signedToken,
+			&SignedDetails{},
+			func(token *jwt.Token) (interface{}, error) {
+				return []byte(os.Getenv("SECRET_KEY")), nil
+			},
+		)
+		if err != nil {
+			return nil, ErrExpiredToken
+		}
+		return token.Claims.(*SignedDetails), nil
+	}
+
+	return nil, ErrExpiredToken
 }
